add_subdirectory(dfi)
add_subdirectory(dram)
add_subdirectory(driver)
add_subdirectory(ibias)
add_subdirectory(messenger)
add_subdirectory(path)
add_subdirectory(pipeline)
add_subdirectory(pll)
add_subdirectory(pmon)
add_subdirectory(receiver)
add_subdirectory(sensamp)
add_subdirectory(vref)
add_subdirectory(wddr)
add_subdirectory(zqcal)
