add_subdirectory(clk)
add_subdirectory(dfi)
add_subdirectory(driver)
add_subdirectory(fsw)
add_subdirectory(gearbox)
add_subdirectory(ibias)
add_subdirectory(lpde)
add_subdirectory(pi)
add_subdirectory(pipeline)
add_subdirectory(pll)
add_subdirectory(pmon)
add_subdirectory(receiver)
add_subdirectory(sensamp)
add_subdirectory(vref)
add_subdirectory(vco)
add_subdirectory(wddr)
add_subdirectory(zqcal)
